Make sure heading of variants table wraps

--- a/app/assets/stylesheets/application/heading.css
+++ b/app/assets/stylesheets/application/heading.css
@@ -3,6 +3,7 @@
 	justify-content: space-between;
 	align-items: start;
 	gap: 1rem 2rem;
+	flex-wrap: wrap;
 	margin-block-end: clamp(1.5rem, 4vi, 2.5rem);
 }
 
